# kinako

./: .gitignore  CONTRIBUTING.md  CONTRIBUTINGJP.md  README.md  analysis.py  borrow.py  et --hard 17675c0a  gitmain.ps1  gitsync.ps1  kinako.ps1  lexer.py  llvm_codegen.py  log  main.py  myast.py  parser.py  pyproject.toml  std.py  tokens.py  type.py  utils.py
KiNaKomoti/: lexer.py  llvm_codegen.py  myast.py  tokens.py  utils.py
KiNaKomoti/std/: std.json
KiNaKomoti/test/: KiNaKomoti_spec.md  test.knk  test.py
docs/: CONTRIBUTING.md  a001.md  spec.md  write.md
docs/spec/: language.md  philosophy.md
src/: analysis.py  borrow.py  borrow_checker.py  lexer.py  llvm_codegen.py  main.py  myast.py  parser.py  scope_checker.py  tokens.py  type.py  type_checker.py  utils.py
src/backend/: jvm.py
src/core/: abs_base.py  ownership.py  value.py
src/core/alias/: aias_ref.py  alias_def.py
src/frontend/: lexer.py  parser.py
src/kinako.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/std/: std.py  stdclass.py
std/: io.knk  std.json  std.py  stdclass.py
test/: A.txt  LogicBNF.ebnf  log  main.knk  test copy.knk  test.knk  test.py  test1.py  test2.py
test/mdfiles/: AI-Borrow.md  draft.md  lang_spec.md
tests/: a001.py  b001.py  b002.py  b003.py  b004.py  b005.py  b006.py  e001.py  e002.py  e003.py  e004.py  e005.py  e006.py  e007.py  e008.py  util.py
tests/kinako/: std.knk  test.knk  test2.knk
tests/test_collecter/: test1.py
tests/test_collector/: test1.py
tests/test_parse/: test1.py
tests/test_resolver/: test1.py
(+73 files in other folders)
