[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinako"
version = "0.1.0"
dependencies = []

[project.scripts]
# ここを src.main に戻す
kinako = "src.main:main"

[tool.setuptools]
# find (where=["src"]) をやめて、srcフォルダ自体をパッケージとして登録する
packages = ["src"]
